--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-imask": "^7.6.1",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5"
   },
