--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-imask": "^7.6.1",
     "react-joyride": "^2.9.3",
     "react-router-dom": "^7.8.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.4",
+    "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
