--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^7.8.0",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-imask": "^7.6.1",
